src/main.css
body {
  font-family: "Gill Sans Extrabold", Helvetica, sans-serif;
  font-size: small;
}

fieldset {
  padding: 20px;
}

table.center {
  margin-left: auto;
  margin-right: auto;
  border-collapse: collapse;
  border: 1px solid #ddd;
}

.gap {
  height: 20px;
}

table td, table th {
  border: 1px solid #ddd;
  padding: 8px;
}

table tr:nth-child(even) {
  background-color: #f2f2f2;
}

table tr:hover {
  background-color: rgba(175, 175, 175, 0.76);
}

table th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: left;
  background-color: #4CAF50;
  color: white;
}

textarea {
  width: 95%;
  height: 250px;
  font-size: 12px;
}

.grid-1 {
  display: grid;
  display: -ms-grid;
  grid-template-columns: 1fr;
  -ms-grid-columns: 1fr;
  grid-gap: 5px;
}

.grid-2 {
  display: grid;
  display: -ms-grid;
  grid-template-columns: 1fr 1fr;
  -ms-grid-columns: 1fr 1fr;
  grid-gap: 5px;
}

.grid-3 {
  display: grid;
  display: -ms-grid;
  grid-template-columns: 1fr 1fr 1fr;
  -ms-grid-columns: 1fr 1fr 1fr;
  grid-gap: 5px;
}

.col-1 {
  grid-column: 1;
  -ms-grid-column: 1;
}

.col-2 {
  grid-column: 2;
  -ms-grid-column: 2;
}

.col-3 {
  grid-column: 3;
  -ms-grid-column: 3;
}

.row-1 {
  grid-row: 1;
  -ms-grid-row: 1;
}

.row-2 {
  grid-row: 2;
  -ms-grid-row: 2;
}

.row-3 {
  grid-row: 3;
  -ms-grid-row: 3;
}

.row-4 {
  grid-row: 4;
  -ms-grid-row: 4
}

